--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,6 @@ add_executable(stringArray array/stringArray.c)
 add_executable(functionDeclare function/functionDeclare.c function/math.c)
 add_executable(localVariable variable/localVariable.c)
 add_executable(macroDefine macro/macroDefine.c)
+add_executable(helloPoint point/helloPoint.c)
+add_executable(valueOfPoint point/valueOfPoint.c)
+add_executable(castPoint point/castPoint.c)
