--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ add_executable(macroDefine macro/macroDefine.c)
 add_executable(helloPoint point/helloPoint.c)
 add_executable(valueOfPoint point/valueOfPoint.c)
 add_executable(castPoint point/castPoint.c)
+add_executable(arrayPoint point/arrayPoint.c)
+add_executable(pointArray point/pointArray.c)
+add_executable(pointPoint point/pointPoint.c)
