array and point/ array point - p63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(macroDefine macro/macroDefine.c)
 add_executable(helloPoint point/helloPoint.c)
 add_executable(valueOfPoint point/valueOfPoint.c)
 add_executable(castPoint point/castPoint.c)
-add_executable(arrayPoint point/arrayPoint.c)
+add_executable(arrayAndPoint point/arrayAndPoint.c)
 add_executable(pointArray point/pointArray.c)
 add_executable(pointPoint point/pointPoint.c)
+add_executable(StringAndPoint point/StringAndPoint.c)
+add_executable(ArrayPoint point/ArrayPoint.c)
