function and point - p65

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable(pointArray point/pointArray.c)
 add_executable(pointPoint point/pointPoint.c)
 add_executable(StringAndPoint point/StringAndPoint.c)
 add_executable(ArrayPoint point/ArrayPoint.c)
+add_executable(FunctionAndPoint point/FunctionAndPoint.c)
