--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,6 @@ add_executable(pointPoint point/pointPoint.c)
 add_executable(StringAndPoint point/StringAndPoint.c)
 add_executable(ArrayPoint point/ArrayPoint.c)
 add_executable(FunctionAndPoint point/FunctionAndPoint.c)
+add_executable(VoidPoint point/VoidPoint.c)
+add_executable(PointOfNull point/PointOfNull.c)
+add_executable(ParamOfMain point/ParamOfMain.c)
