--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_executable(FunctionAndPoint point/FunctionAndPoint.c)
 add_executable(VoidPoint point/VoidPoint.c)
 add_executable(PointOfNull point/PointOfNull.c)
 add_executable(ParamOfMain point/ParamOfMain.c)
+add_executable(Malloc memoryAllocation/MemoryAllocation.c)
