--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_executable(VoidPoint point/VoidPoint.c)
 add_executable(PointOfNull point/PointOfNull.c)
 add_executable(ParamOfMain point/ParamOfMain.c)
 add_executable(Malloc memoryAllocation/MemoryAllocation.c)
+add_executable(StringHandle string/StringHandle.c)
