--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_executable(PointOfNull point/PointOfNull.c)
 add_executable(ParamOfMain point/ParamOfMain.c)
 add_executable(Malloc memoryAllocation/MemoryAllocation.c)
 add_executable(StringHandle string/StringHandle.c)
+add_executable(Const variable/Const.c)
