struct / union / enum - p98

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_C_STANDARD 11)
 add_executable(get_start main.c)
 add_executable(helloworld helloworld/hello.c)
 add_executable(escape string/escape.c)
-add_executable(data_type data_type/cDataType.c)
+add_executable(datatype datatype/cDataType.c)
 add_executable(bitShift operation/comma.c)
 add_executable(stringArray array/stringArray.c)
 add_executable(functionDeclare function/functionDeclare.c function/math.c)
@@ -27,3 +27,5 @@ add_executable(ParamOfMain point/ParamOfMain.c)
 add_executable(Malloc memoryAllocation/MemoryAllocation.c)
 add_executable(StringHandle string/StringHandle.c)
 add_executable(Const variable/Const.c)
+add_executable(Struct datatype/Struct.c)
+add_executable(Enum datatype/Enum.c)
