--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_executable(StringHandle string/StringHandle.c)
 add_executable(Const variable/Const.c)
 add_executable(Struct datatype/Struct.c)
 add_executable(Enum datatype/Enum.c)
+add_executable(HelloLinkList linkList/HelloLinkList.c)
